--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -5,4 +5,13 @@
   "workspaceFolder": "/workspace",
   "forwardPorts": [389]
 }
+{
+  "name": "Python 3",
+  "image": "ubuntu:20.04",
+  "postCreateCommand": "apt-get update && apt-get install -y python3 python3-pip",
+  "settings": { 
+      "terminal.integrated.shell.linux": "/bin/bash"
+  }
+}
+
 
