--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -3,15 +3,14 @@
   "dockerComposeFile": "../docker-compose.yml",
   "service": "openldap",
   "workspaceFolder": "/workspace",
-  "forwardPorts": [389]
-}
-{
+  "forwardPorts": [389]}
+
   "name": "Python 3",
   "image": "ubuntu:20.04",
   "postCreateCommand": "apt-get update && apt-get install -y python3 python3-pip",
   "settings": { 
       "terminal.integrated.shell.linux": "/bin/bash"
   }
-}
+
 
 
